fix white space on scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  height: calc(100% + 60px);
-  min-height: calc(100% + 60px);
-}
-
 .responsive-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
